UX: fix alignment for RTL languages (#67)

--- a/common/common.scss
+++ b/common/common.scss
@@ -87,8 +87,13 @@ $max-width: 600px;
     line-height: 1;
     color: var(--primary-medium);
     height: 100%;
-    padding-right: 0.25em;
     position: absolute;
+    left: 0;
+    .rtl & {
+      right: 0;
+      left: unset;
+    }
+
     .discourse-no-touch & {
       &:hover {
         background: transparent;
@@ -100,6 +105,10 @@ $max-width: 600px;
     }
     + .search-menu-container .search-input {
       padding-left: 1.75em;
+      .rtl & {
+        padding-left: unset;
+        padding-right: 1.75em;
+      }
     }
     + .search-menu-container .search-input .search-context {
       margin-left: 4px;
